--- a/Jabuuti_(magaalo).mw
+++ b/Jabuuti_(magaalo).mw
@@ -96,9 +96,9 @@ Laga soo bilaabo 1862 ilaa 1894, dhulka ilaa waqooyiga gacanka Tadjoura waxaa lo
 Faransiiska ayaa markii dambe asaasay Magaalada Jabuuti sanadkii 1888-kii, oo ah xeeb aan horay u degi jirin. Ambouli waxay ahayd tuulo yar kahor intaysan Faransiisku imaanin waxay qiyaastii 3 Km koonfur kaga beegan tahay magaalada Ras Jabuutiil, Ambouli waxaa loo aqoonsan yahay magaalada 'Canbala' ah O.G.S. Crawford. Canbala wuxuu ka muuqdaa khariidadda Muhammad al-Idrisi ee 1192 xeebta [[Geeska Afrika]], koonfur-bari ee dariiqyada Bab-el-Mandeb, iyo Cambaleh, oo ah magaalo ay ku safrayaan socdaalka Venetian Bragadino, oo ah qarnigii 13-aad ee Yurub u soo booqda [[Itoobiya]], deggenaa siddeed sano.
 
 Sanadkii 1896, dejinta waxaa laga dhigay caasimada Faransiiska Somaliland
-Ujeedada ugu weyn ee danta Faransiiska waxay ahayd gudaha laga ilaaliyo wadada ganacsiga Madagascar iyo Indochina ee Ingiriiska iyo Talyaaniga. Magaalada ayaa markii dambe si weyn u kordhay kadib markii la dhisay Dhismaha Wadada Tareenka ee Imaaraatka. Si dhakhso ah ayey u kortay, iyada oo ka soo bilaabmaysa 1,200 oo qof oo deggan 1893 ilaa 5,561 sanadkii 1906. Intaa waxaa sii dheer, aagga hodanka ah ee koonfurta ee Ambouli wuu sii kordhayay sababtuna tahay dhul beereedyo fara badan oo timir iyo geedo leh. Dekadda Jabuuti waxay noqotay meel kaydka u ah Maraakiibta Badda ee marinnada u dhaxaysa France, Madagascar iyo Indochina bishii Nofeembar 1895.
+Ujeedada ugu weyn ee danta Faransiiska waxay ahayd gudaha laga ilaaliyo wadada ganacsiga Madagascar iyo Indochina ee Ingiriiska iyo Talyaaniga. Magaalada ayaa markii dambe si weyn u kordhay kadib markii la dhisay Dhismaha Wadada Tareenka ee Imaaraatka. Si dhakhso ah ayey u kortay, iyada oo ka soo bilaabmaysa 1,200 oo qof oo deggan 1893 ilaa 5,561 sanadkii 1906. Intaa waxaa sii dheer, aagga hodanka ah ee koonfurta ee Ambouli wuu sii kordhayay sababtuna tahay dhul beereedyo fara badan oo timir iyo geedo leh. Dekadda Jabuuti waxay noqotay meel kaydka u ah Maraakiibta Badda ee marinnada u dhaxaysa Faransiiska, Madagascar iyo Indochina bishii Nofeembar 1895.
 
-Waqtigaas waxaa lahaa dad deggan 15,000 oo qof, oo aad uga badan tirada dadka ku nool dhammaan magaalooyinka deriska la ah [[Itoobiya]] marka laga reebo [[Harar]]. In kasta oo shirkaddii ugu horreysay ay ku guul darreysatay oo u baahatay siidayn dowladda si looga fogaado inay ku hoos dhacdo maamulkii Ingiriiska, Waddada Tareenka ee Faransiis-Itoobiyaan lafteeda waxay ahayd guul waxayna u oggolaatay ganacsiga magaalada Jabuuti inuu si dhakhso ah u baabi'iyo ganacsigii hore ee salka kulahaa ee laga sii watay agagaarka Zeila ee ku dhow British Somaliland. Jabuuti waxay noqotay xarunta laga dhoofiyo koonfurta Itoobiya iyo [[Soomaali Galbeed|Ogaadeenya]], oo ay kujirto ganacsiga kafeeka Harari iyo qaadka. Magaalada Jabuuti waxay bilaabatay inay horumariso sidii xarun ganacsi. Sanadkii 1932, Magaalada Jabuuti waxay ahayd magaaladii ugu horreeysay ee korantada ka baxda Faransiiska Somaliland.
+Waqtigaas waxaa lahaa dad deggan 15,000 oo qof, oo aad uga badan tirada dadka ku nool dhammaan magaalooyinka deriska la ah [[Itoobiya]] marka laga reebo [[Harar]]. In kasta oo shirkaddii ugu horreysay ay ku guul darreysatay oo u baahatay siidayn dowladda si looga fogaado inay ku hoos dhacdo maamulkii Ingiriiska, Waddada Tareenka ee Faransiis-Itoobiyaan lafteeda waxay ahayd guul waxayna u oggolaatay ganacsiga magaalada Jabuuti inuu si dhakhso ah u baabi'iyo ganacsigii hore ee salka kulahaa ee laga sii watay agagaarka Zeila ee ku dhow Dhulka Soomaalida ee Biritishka. Jabuuti waxay noqotay xarunta laga dhoofiyo koonfurta Itoobiya iyo [[Soomaali Galbeed|Ogaadeenya]], oo ay kujirto ganacsiga kafeeka Harari iyo qaadka. Magaalada Jabuuti waxay bilaabatay inay horumariso sidii xarun ganacsi. Sanadkii 1932, Magaalada Jabuuti waxay ahayd magaaladii ugu horreeysay ee korantada ka baxda Faransiiska Somaliland.
 
 [[File:Djibouti City in the 1970s at Place 27 June.jpg|thumb|right|300px|Plaza 27 Juun 1970-kii.]]
 Intii lagu jiray Dagaalkii Labaad ee Adduunka, Magaalada Jabuuti waxaa ku dhuftay duqeymo xagga cirka ah oo [[Talyaaniga]] ka dhacay Juun 21, 1940, kaasoo ay ku dhinteen dad badan oo magaalada ku sugnaa. Dabka ka hortagga diyaaraduhu wuxuu ahaa mid daran oo laba diyaaradood oo Talyaani ah ay ku guuldareysteen inay soo noqdaan, laakiin dab iyo qaraxyo ayaa lagu arkay Jabuuti. Habeenkii, dhowr mawjadood oo ka mid ah kuwa wax duqeeya ee Savoia-Marchetti SM.81 ayaa weerartay xarumaha dekedda. Kadib faransiisku wuu dhacay oo gumeystahaasna waxaa xukumayey dowladda taabacsan Axis Vichy (Faransiiska). Waqtigaas, weerarkii Ingiriiska ee ka dhanka ah dadka reer Talyaani wuxuu adkeeyay xannibaadda Faransiiska Somaliland, abaarna waxay ku jirtay. Dadka deegaanka ayaa ku magac-daray xannibaadda carmii, oo ah eray loogu talagalay nooc hadhuudhka had iyo goor loo habeeyo lo'da, laakiin waxaa loo adeegsan jiray cuntada bini-aadamka marka la eego dhererka abaarta. Bishii Disember 1942, qiyaastii 4,000 oo ciidamada Ingiriiska iyo kuwa Faransiiska ee Xorta ah ayaa qabsaday magaalada.
