--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -9,7 +9,7 @@
 |related-c = [[Dir]], [[Daarood]], [[Hawiye]], [[Raxanweyn]], iyo kuwo kale oo [[Dadka Soomaalida]]
 }}
 [[File:Sheikhisaaqmaydh.jpg|thumb|right|[[maydh]]]]
-'''Isaaq''' ({{lang-en|Isak}}; {{lang-ar|إسحاق}}; sidoo kale loo yaqaano '''Isaaq ama Isaxaaq''')<ref>{{cite book|last1=Burton|first1=Richard Francis|title=First Footsteps in East Africa|date=1856|publisher=Longman, Brown, Green & Longmans|location=London|isbn=978-1419119828|page=103|url=https://books.google.com/books?id=5POdm7UKXP4C&pg=PA103&dq=aydur+first+footsteps&hl=en&sa=X&ved=0ahUKEwiMnZecoNPOAhVLB8AKHRPgCt4Q6AEIHDAA#v=onepage&q=aydur%20first%20footsteps&f=false}}</ref> (guud ahaan loo yaqaano ''Reer Sheekh Isaxaaq'') waa [[beel]] ka mid ah [[Dadka Soomaalida]] ee ku dhaqan [[Waqooyiga Soomaaliya]], maanta loo yaqaano [[Somaliland]]. Beesha Isaaq waxay ka mid tahay beel-weynta [[Dir]], waxaanay deegaan ahaan ku dhaqan yihiin Waqooyiga [[Soomaaliya]], wadanka [[Itoobiya]] iyo wadanka [[Jabuuti]].
+'''Isaaq''' ({{lang-en|Isak}}; {{lang-ar|إسحاق}}; sidoo kale loo yaqaano '''Isaaq ama Isaxaaq''')<ref>{{cite book|last1=Burton|first1=Richard Francis|title=First Footsteps in East Africa|date=1856|publisher=Longman, Brown, Green & Longmans|location=London|isbn=978-1419119828|page=103|url=https://books.google.com/books?id=5POdm7UKXP4C&pg=PA103&dq=aydur+first+footsteps&hl=en&sa=X&ved=0ahUKEwiMnZecoNPOAhVLB8AKHRPgCt4Q6AEIHDAA#v=onepage&q=aydur%20first%20footsteps&f=false}}</ref> (guud ahaan loo yaqaano ''Reer Sheekh Isaxaaq'') waa [[beel]] ka mid ah [[Dadka Soomaalida]] ee ku dhaqan [[Waqooyiga Soomaaliya]], maanta loo yaqaano [[Somaliland]]. Beesha Isaaq waxay ka mid tahay beel-weynta [[Dir]], waxaanay deegaan ahaan ku dhaqan yihiin Waqooyiga [[Soomaaliya]], wadanka [[Itoobiya]] iyo wadanka [[Jabuuti]]. 
 
 ==Taariikh==
 
@@ -35,7 +35,8 @@ Intaas waxaa dheer, Sheekhu wuxuu gabadh ka guursaday oo la degay beesha [[Dir]]
 *  Arab
 *  Garhajis<ref>{{cite book|last1=Lewis|first1=I.M.|title=A Pastoral Democracy: A Study of Pastoralism and Politics Among the Northern Somali of the Horn of Africa|date=1999|publisher=International African Institute|location=Oxford|isbn=0-85255-280-7|page=157|edition=Reprint|url=https://books.google.com/books?id=eK6SBJIckIsC&printsec=frontcover&dq=pastoral+democracy&hl=en&sa=X&ved=0ahUKEwji5In-ldDOAhUlD8AKHZbNC5MQ6AEIHjAA#v=onepage&q=arab&f=false}}</ref>
 
-Isaaqu waa Beesha Soomaaliyeed oo ugu weyn. Qabiilkani wuxuu dagaa [[Somaliland]] oo ah meesha uug taariikh ahaan dago, Naivasha Kenya, iyo [[Soomaali Galbeed|Kililka shanaad]] ee somalida [[Itoobiya]]. 
+==Deegaan==
+Isaaqu wuxuu dagaa dhulka Soomaaliyeed, gaar ahaan,  [[Somaliland]] oo buuraha Karkaar ee waqooyiga Soomaaliya badhka galbeedka ka degaa; weliba Naivasha Kenya, iyo [[Soomaali Galbeed|Kililka shanaad]] ee somalida [[Itoobiya]]. Deegaan ahaan, wuxuu isaaq soohdin qabiil la leeyahay Ogaden dhinaca koonfureed, iyo Gadabuursi dhinaca galbeed, iyo dhinaca bariga wuxuu Isaaq soohdin la leeyahay [[reer darawiish]] iyo Warsangeli.
 
 ==Dadka Caanka==
 
