Magaalada Sheikh Waa Magaalo Qadiimiya Oo Aad U Fac Weyn' Taariikho Guunina Ay Ku Duugan yihiin'     Waana Magaalo Leh' Hawo Aad U Fiican Kuna Taalaa Dhul Aad U Sareeya, " HighLands" Oo leh Hawo Qabow,  Magaalada Lagu Magacaabi Jirey "Fardowsa" Waxay Ahayd Magaalo Asaasantay Ama Unkantay' Wakhtigii Fiditaanka Diinta Islaamka, Waxaa Goobtii Magaalada Fardowsai Ku Taalay Wakhtigan Ku yaala Ku dhawaad 6000-Xabaalo ah' Waxaanay Isku Hayaan Dhinaca Xabaaluhu' Lamana Garanayo Cid ku Aasan Xabaalahani.

--- a/Buurta_Sheekh.mw
+++ b/Buurta_Sheekh.mw
@@ -1,7 +1,14 @@
 '''Buurta Sheekh''' ( {{lang-ar|شَيخ‎}}) waa [[buur]] ay ku hoostaalo degmo yar oo la yiraahdo '''Sheekh''' oo ka mida Gobolka [[Saaxil]] ee maamulka la magac baxay [[Somaliland]]. [[Burco]] oo ah gobolka [[Togdheer]] ayay 70 km [[woqooyi]] ka xigtaa,
 wxanay caan kutahay dalxiisnimada iyo beeraleyda ku nool sheek.
 sheekh cimiladeedu waa qbob, roob kama qaado sheekh, waana akhtar.
-noocwalba waa uu kabaxaa sheekh.
+noocwalba waa uu kabaxaa sheek. Magaalada Sheikh Waa Magaalo Qadiimiya Oo Aad U Fac Weyn' Taariikho Guunina Ay Ku Duugan yihiin'
+
+Waana Magaalo Leh' Hawo Aad U Fiican Kuna Taalaa Dhul Aad U Sareeya, " HighLands" Oo leh Hawo Qabow,
+
+Magaalada Lagu Magacaabi Jirey "Fardowsa" Waxay Ahayd Magaalo Asaasantay Ama Unkantay' Wakhtigii Fiditaanka Diinta Islaamka, Waxaa Goobtii Magaalada Fardowsai Ku Taalay Wakhtigan Ku yaala Ku dhawaad 6000-Xabaalo ah' Waxaanay Isku Hayaan Dhinaca Xabaaluhu' Lamana Garanayo Cid ku Aasan Xabaalahani.
+
+Baadhitaano Ay Sameeyeen Taariikh-yahano Giriik ahi' "Greece
+
 
 
 
