--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -55,7 +55,7 @@ https://ia800504.us.archive.org/33/items/TheMadMullahOfSomaliland/214616_The_Mad
 *https://arcadia.sba.uniroma3.it/bitstream/2307/5384/1/Proclaim%20to%20the%20people_Five%20poems%20by%20Sayyid%20Mu%E1%B8%A5ammad%20%27Abd%20All%C4%81h%20%E1%B8%A4asan%20of%20Somalia.pdf gabay translation english
 *https://www.islamicfinder.org/quran/surah-al-baqara/?translation=somali-mahmud-muhammad-abduh (surah baqarah - somali translate)
 *https://www.islamicfinder.org/quran/surah-al-humaza/1/?translation=somali-mahmud-muhammad-abduh (surah humaza - somali translate)
-*https://cpb-us-w2.wpmucdn.com/u.osu.edu/dist/5/1926/files/2016/02/Dictionary-Biology-1s0uug7.pdf
+*https://cpb-us-w2.wpmucdn.com/u.osu.edu/dist/5/1926/files/2016/02/Dictionary-Biology-1s0uug7.pdf (qaamuus - dictionary)
 *https://org.uib.no/smi/sa/10/10Defeat.pdf (gudban - ingiriis)
 *https://so.wikipedia.org/wiki/Doonis (guurka)
 
