--- a/Biciide.mw
+++ b/Biciide.mw
@@ -7,12 +7,7 @@
 
 [[File:Bicide yoonis isaaq clan.jpg|alt=biciide yoonis barre |thumb|315.98x315.98px|biciide yonis mid kamida beeelaha ugu badan  reer shikh isxaaq]]
 waa midkamida beelaha isaaqa  kuwa ugu balaadhan(tiro ahaan)<ref>https://www.somalinet.com/forums/viewtopic.php?t=254421</ref> iyo dhul ahaanba, biciide yoonis  waxay taariikh  ahaan kaalin weyn ku lahayen xaaladkasta oo dalku soomaray. iyago saamentooda kulahaa xitaa kahor intaanu gumaystuhu qabsan dalka. Wagaas oo hogaamiya beeleedyadi waaagi qarnigi 14aad  ee kaso jeday baciide ay ka talin jireen bariga somaliland.
-Ragii magaca weynaa ee Biciide waxa ka mid ahaa. 
-1. Xaaji xasan Axmed Faarax 
-2. Maxamed xaaji ducaale dhoolayare
-3. Maxamed nuur ammaan
-<ref>https://www.google.com/search?client=ms-google-coop&cx=partner-pub-7548458662633181%3A2443211434&ei=PMgtXcqCCI6y6QS637GIBg&q=somalia+map+sanaag+clas&oq=somalia+map+sanaag+clas&gs_l=psy-ab.3..38l4.6196.11335..11750...0.0..1.1105.10060.2-1j8j3j3j2j2......0....1..gws-wiz.......0i71j35i39j0j0i131j0i67j0i131i20i263j0i22i30.HgyaXIbfRp8</ref> dhulka hada lo yaqan sanaag bari nugaal iyo sool sido kale  waqtigi guumaystaha waxay beesha badh kamidi raacen ama la safteen  ururki daraawiishta  oo ahaa ciidamo kaso horjeeday gumaystihi ingriiska waxana ka mid ahaa shire axmed faarax oo ahaa gabyaa kadibna ku biiray ciidanki darawishta ayaa kadib darawishtu waxay dulan kuso qadeen dhulki uu kasoo jeeday shire widhidhif.  waxayna cagta mariyen qaar badan oo kamida reerkii shire widhidhif ee (Reer Saalax) oo iyagu ingiriska<ref>https://www.jstor.org/stable/1157617</ref> la safna ama taageer sanaa markasu tiriyay gabay uu ugu adkesan kari wayay xanta iyo tuhunka ay ka qaben beeshisa oo ay is lahaayen isaga ayaa ka danbeeya duulanka daraawishtu idnku sooqaday. 
-Raga magaca weyn ee ku jirey waxa ka mid ahaa sh. Ismaaciil axmed bare oo ahaa wadaad ka mid ahaa golihii khusuusiga daraawiishta, sidoo kale waxa ka mid ahaa, Xirsi Afdiir oo ahaa nin badmaax ah kana soo jeedey qoys Hanti leh ninkaas oo seyidku ku halqabsaday tuduc ka mid ah gabayadiisii(waxan gaajo qabin ina afdiir gabanadiisii) taariikhaha hore waxa jiray marki beeshu kabadatay asaaaged in iyagi isu muuqdeen oo  ay colaadi ka dhex bilaabatay  qaar ka mida beelaha biciide laftisa waxana jiray dagaal soconayay waqti  dheer oo u dhaxeeyay '''[[axmed faarax(habarjeclo)]]''' iyo '''[[reeriidle]]''' oo ay ku idladen sheekhi iyo sharifki iyo xoogi labadasi belod  beeshu waxay ka talinjirtay xeebta teedsan berbera ilaa Xiis oo ay boqoradi, iyo hogamiye qabailki, ka dhashay beeshu  ka talin jireen dekeda has iyado waxa ugu muhimsana ee laga so dejin jirau aha timirta,
+Ragii magaca weynaa ee Biciide waxa ka mid ahaa  Xirsi Afdiir oo ahaa nin badmaax ah kana soo jeedey qoys Hanti leh ninkaas oo seyidku ku halqabsaday tuduc ka mid ah gabayadiisii(waxan gaajo qabin ina afdiir gabanadiisii) taariikhaha hore waxa jiray marki beeshu kabadatay asaaaged in iyagi isu muuqdeen oo  ay colaadi ka dhex bilaabatay  qaar ka mida beelaha biciide laftisa waxana jiray dagaal soconayay waqti  dheer oo u dhaxeeyay '''[[axmed faarax(habarjeclo)]]''' iyo '''[[reeriidle]]''' oo ay ku idladen sheekhi iyo sharifki iyo xoogi labadasi belod  beeshu waxay ka talinjirtay xeebta teedsan berbera ilaa Xiis oo ay boqoradi, iyo hogamiye qabailki, ka dhashay beeshu  ka talin jireen dekeda has iyado waxa ugu muhimsana ee laga so dejin jirau aha timirta,
 waqtigan casriga beeshu waxay ka tirsan tahay dadka dega gobolada waqooyi somaliland gaar ahaan sanaag saxil sool iyo togdheer<ref>https://www.google.com/search?q=somaliland+clan+map&tbm=isch&source=iu&ictx=1&fir=NjZ7YexnHxS_JM%253A%252CGu4XvyBznsKy4M%252C_&vet=1&usg=AI4_-kRnYtBg1Ap92B_RTGpw7yJyr_d5dQ&sa=X&ved=2ahUKEwi71_7f3rnjAhWKDuwKHYVYDFkQ9QEwAXoECAcQBg#imgrc=NjZ7YexnHxS_JM:</ref>
 Sidp kale '''[[bancade]]''' iyo '''[[Karamaan]]'''
 Degmada Gar adag, ceel afweyn, Gudmobiyocas, iyo Dararweyne bari. 
