*Empty MediaWiki Message*

--- a/Cali_barre.mw
+++ b/Cali_barre.mw
@@ -1,13 +1,5 @@
 [[File:Cali barre ragi habarjeclo ilbixiyay.jpg|alt=QABILKACALI  BARE MUUSE ABOKOR HABARJECLO|thumb|337.983x337.983px|CALI BARE MUSE ABOKOR HABARJECLO]]
-cali barre waa qabiil kamida qabiilada habar jeclo ugu waaweyn gaar ahaan muuse abokor waxaanay walaalo yihiin yoonis Barre oo  ah '''[[biciide]]''' iyo '''[[maxamed barre]]''' .waxana adeer u ah '''[[Reeryoonis]]'''
-Cali barre waxa uu ahaa qabiilkii ugu badnaa ciidamada daraawiishta iyaga iyo cali geriga dhulbahante waa tii  sayidku ka gabyay
-Isagoo tix iyo tiraabba ku sheegay
-Waxaana kamid ah ereyadda dadku had iyo jeer soo qaataan sida
-(walee belo cali barow waad ku cidhib beeli)
-Cali barre waxa uu habar jeclo iyo soomaalida inteeda kale kuleeyahay
-Sumcad iyo sharaf aan lasoo koobi karin
-Cali bare waxaa ka dhashay.
-Xaaji Suudi oo ahaa afhayeeka sayyidka ee [[Darawiishta]] (Haji Sudi)(1857–1920) HE Maxamed Xaashi Abdi, oo ahaa wasiir iyo ambasador, General Cismaan Cawed Xaashi, maxamuud xaashi cabdi ( ex wasiirka madaxtooyadda ee dawladdi [[Axmed Maxamed Maxamuud (Siilaanyo)|silaanyo]]) Xildhibaaan Axmed Ducaale Bulaale, xildhibaan aamina cumar jaamac ( xubinta ugu firfircoon [[Baarlamaanka Federaalka Soomaaliya|baarlamaanka]] somali )
+cali barre waa qabiil kamida qabiilada habar jeclo ugu waaweyn gaar ahaan muuse abokor waxaanay walaalo yihiin yoonis Barre oo  ah '''[[biciide]]''' iyo '''[[maxamed barre]]''' .waxana adeer u ah '''[[Reeryoonis]]''' oo ka mid ah HE Maxamed Xaashi Abdi, oo ahaa wasiir iyo ambasador, General Cismaan Cawed Xaashi, maxamuud xaashi cabdi ( ex wasiirka madaxtooyadda ee dawladdi [[Axmed Maxamed Maxamuud (Siilaanyo)|silaanyo]]) Xildhibaaan Axmed Ducaale Bulaale, xildhibaan aamina cumar jaamac ( xubinta ugu firfircoon [[Baarlamaanka Federaalka Soomaaliya|baarlamaanka]] somali )
 saleebaan dirir (gudoomiyaha jaamacdda burco)
 xaaji maxamed xuseen aadan (xaaji yare) gudoomiyihii jamaacada ikhwaanul muslimiinka ee gobolka [[togdheer]] [[1982]]-[[1991]
 Degaan ahaan [[Cali barre|cali]] [[Cali barre|bare]] wuxuu degaa [[Gobolada Somaliland|gobalada]] [[sool]]. [[sanaag]]. [[saraar]], [[togdheer]], iyo qaybo ka mid ah [[Buuhoodle|degmada]] [[buuhoodle]].
