*Empty MediaWiki Message*

--- a/Habar_Jeclo.mw
+++ b/Habar_Jeclo.mw
@@ -1,13 +1,12 @@
 
-{{Infobox ethnic group|||group=|flag=[[File:Flag_of_Somaliland.svg|60px]][[File:Flag_of_Ethiopia.svg|60px]][[File:Flag_of_Kenya.svg|45px]]|image=|region1={{flagcountry|Somaliland}}|region2={{flagcountry|Ethiopia}}|region3={{flagcountry|Kenya}}|langs=[[Af Soomaali]],  [[Af Carabi]]|rels=[[Islam]] ([[Sunni Islam]])|related-c=[[Habar Awal]], [[Habar Yoonis]], iyo tolalka kalee ee beesha [[Isaaq]] iyo guud ahaan dadka [[Soomaalida]] <!-- CONFIRMED RELATIONS!!! -->|native_name=Habar Jeclo <br /> هبر جعلو|native_name_lang=so|related_groups=}}'''Habar Jeclo''' ({{Lang-en|Habr Je'lo}}, {{lang-ar|هبر جعلو}}, ''Muuse Shiekh Ishaaq ibn Ahmed'' ) waa beel oo ka mid ah beel-weynta [[Isaaq]]. Beesha Habar Jeclo waxay dagaan bariga gobolka [[Togdheer]], [[Saraar]], galbeedka gobolada [[Sanaag]] iyo [[Sool]] iyo bariga gobolka [[saaxil]] . Beeshu waxa ay kale oo degtaa [[Ethiopia]] iyo [[Kenya]] [[muuse abokor]] <ref>{{cite book|title=Anatomy of Violence: Understanding the Systems of Conflict and Violence in Africa|page=130|language=english}}</ref><ref>{{cite web|url=http://www.africa.upenn.edu/Hornet/past0698.html|title=Changing Pastoralism in the Ethiopian Somali National Regional State (Region 5)|first=}}</ref>
+{{Infobox ethnic group|||group=|flag=[[File:Flag_of_Somaliland.svg|60px]][[File:Flag_of_Ethiopia.svg|60px]][[File:Flag_of_Kenya.svg|45px]]|image=|region1={{flagcountry|Somaliland}}|region2={{flagcountry|Ethiopia}}|region3={{flagcountry|Kenya}}|langs=[[Af Soomaali]],  [[Af Carabi]]|rels=[[Islam]] ([[Sunni Islam]])|related-c=[[Habar Awal]], [[Habar Yoonis]], iyo tolalka kalee ee beesha [[Isaaq]] iyo guud ahaan dadka [[Soomaalida]] <!-- CONFIRMED RELATIONS!!! -->|native_name=Habar Jeclo <br /> هبر جعلو|native_name_lang=so|related_groups=}}'''Habar Jeclo''' ({{Lang-en|Habr Je'lo}}, {{lang-ar|هبر جعلو}}, ''Muuse Shiekh Ishaaq ibn Ahmed'' ) waa beel oo ka mid ah beel-weynta [[Isaaq]]. Beesha Habar Jeclo waxay dagaan bariga gobolka [[Togdheer]], [[Saraar]], galbeedka gobolada [[Sanaag]] iyo [[Sool]] iyo bariga gobolka [[saaxil]] . Beeshu waxa ay kale oo degtaa [[Ethiopia]] iyo [[Kenya]] [[muuse abokor]] <ref>{{cite book|title=Anatomy of Violence: Understanding the Systems of Conflict and Violence in Africa|page=130|language=english}}</ref><ref>{{cite web|url=http://www.africa.upenn.edu/Hornet/past0698.html|title=Changing Pastoralism in the Ethiopian Somali National Regional State (Region 5)|first=}}</ref> Deegaan ahaan, wuxuu habarjeclo soohdin qabiil la leeyahay Ogaden dhinaca koonfureed, iyo dharw jilib dhinaca galbeed, iyo dhinaca bariga wuxuu habarjeclo soohdin la leeyahay [[reer darawiish]] iyo Garxajis.
 
 <br />
 
 == Dad caan ah oo Habar Jeclo ah ==
 
 * [[Axmed Maxamed Maxamuud (Siilaanyo)]], Madaxweynaha 4aad ee jamhuuriyadda [[Somaliland]]
-* [[Xaaji suudi|Xaaji Suudi]], 
-hogaamiye sare ee dhaqdhaqaaqa [[Daraawiishta]]
+* [[Xaaji suudi|Xaaji Suudi]], afhayeenka [[Sayyidka]]
 Hogaamiyihii [[Daraawiishta]].
 * Suldaan Cali Muuse, Suldaankii ugu horeeyay ee belweynta [[Habar Jeclo]] 
 * ''Boqor Cismaan Aw Maxamuud Buurmadow'', Boqorka ummada Somaliyeed,
