*Empty MediaWiki Message*

--- a/Majeerteen.mw
+++ b/Majeerteen.mw
@@ -11,7 +11,7 @@
 }}
 [[File:Majeerteen tribe.jpg|thumb|200px|Qabiilka majeerteen]]
 
-'''Majeerteen''' ({{lang-en|''Majerten''}}, {{lang-ar|ماجرتين}}, ''Muhammad Harti Amaleh Abdi Muhammad Abdirahman Jaberti''; sidoo kale loo qoro '''Majerteen''', '''Macherten''', '''Majertain''', or '''Mijurtin''')<ref>{{cite web |url=http://www.lib.utexas.edu/maps/africa/somalia_ethnic_grps_2002.jpg |title=Ethnic Groups |author=[[Central Intelligence Agency]] |year=2002 |work=Somalia Summary Map |publisher=[[Perry–Castañeda Library]] |accessdate=18 May 2010}}</ref> waa [[Beelaha Soomaalida|qabiil]] ka tirsan beelaha [[Daarood]]ka, ee [[Soomaali|Dadka Soomaalida]]. Majeerteenku waxay deegaan ku yihiin wadanka [[Soomaaliya]] (gaar ahaan inta ugu badan gobolada [[Puntland]]), deegaano ka mid ah [[Howd]]ka; iyo [[Itoobiya]] (meelo ka mid ah deegaanka [[Ogaden]]).<ref>"Collective Punishment", p. 14</ref> Majeerteenku wuxuu ka mid yahay beelaha [[Harti]] ee hoostaga [[Daarood]]ka.
+'''Majeerteen''' ({{lang-en|''Majerten''}}, {{lang-ar|ماجرتين}}, ''Muhammad Harti Amaleh Abdi Muhammad Abdirahman Jaberti''; sidoo kale loo qoro '''Majerteen''', '''Macherten''', '''Majertain''', or '''Mijurtin''')<ref>{{cite web |url=http://www.lib.utexas.edu/maps/africa/somalia_ethnic_grps_2002.jpg |title=Ethnic Groups |author=[[Central Intelligence Agency]] |year=2002 |work=Somalia Summary Map |publisher=[[Perry–Castañeda Library]] |accessdate=18 May 2010}}</ref> waa [[Beelaha Soomaalida|qabiil]] ka tirsan beelaha [[Daarood]]ka, ee [[Soomaali|Dadka Soomaalida]]. Majeerteenku waxay deegaan ku yihiin wadanka [[Soomaaliya]] (gaar ahaan inta ugu badan gobolada [[Puntland]]), deegaano ka mid ah [[Howd]]ka; iyo [[Itoobiya]] (meelo ka mid ah deegaanka [[Ogaden]]).<ref>"Collective Punishment", p. 14</ref> Majeerteenku wuxuu ka mid yahay beelaha [[Harti]] ee hoostaga [[Daarood]]ka. Deegaan ahaan, wuxuu Majeerteen soohdin qabiil la leeyahay Habar-Gidir dhinaca koonfureed, iyo [[Dishiishe]] dhinaca waqooyi, iyo dhinaca galbeed wuxuu Majeerteen soohdin la leeyahay [[Warsangeli]] iyo [[reer darawiish]].
 
 ==Daarood==
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe ), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
