*Empty MediaWiki Message*

--- a/Garxajis.mw
+++ b/Garxajis.mw
@@ -1,4 +1,5 @@
 [[File:Prime minister mahdi gulaidh khadar.jpg|thumb|mahdi gulaid]]
-Habar yoonis waa beelaha ka mid ah beelaha Isaaq.
+Garxajis  waa beelaha ka mid ah beelaha Isaaq. Garxajis wuxuu u kala baxa Ciidagale iyo Habaryoonis. Deegaan ahaan, wuxuu habaryoonis soohdin qabiil la leeyahay Ogaden dhinaca koonfureed, iyo dharw jilib ee Isaaq dhinaca galbeed, iyo dhinaca bariga wuxuu habaryoonis soohdin la leeyahay [[reer darawiish]] iyo [[Warsangeli]].
+
 
 [[category:qabiil]]
