*Empty MediaWiki Message*

--- a/Ogaadeen_(beel).mw
+++ b/Ogaadeen_(beel).mw
@@ -9,7 +9,7 @@
 |rels = [[Islam]] (gaar ahaan [[Sunni Islam|Sunni]], [[Suufi]])
 |related-c=Jidwaq, [[Absame]], qabiilo kale [[Daarood]] ka tirsan, iyo [[Beelaha Soomaalida]] <!-- CONFIRMED RELATIONS!!! -->
 }}
-'''Ogaadeen''' ({{lang-en|''Ogaden''}}, {{lang-ar|أوغادين}}) waa [[Beelaha Soomaalida|qabiil]]<nowiki/>ka ugu badan beesha [[Daarood]]ka, ee ku nool [[Dhulbaxsinta Afrika|dhulbaxsinta]] konfuur iyo galbeed, ee [[Soomaali|Dadka Soomaalida]]. Ogaadeenku waxay deegaan ku yihiin [[Itoobiya]] (gaar ahan deegaanka [[Ogaden]]), wadanka [[Soomaaliya]] (gaar ahaan koonfur), iyo wadanka [[Kiinya]].<ref>"Collective Punishment", p. 14</ref>
+'''Ogaadeen''' ({{lang-en|''Ogaden''}}, {{lang-ar|أوغادين}}) waa [[Beelaha Soomaalida|qabiil]]<nowiki/>ka ugu badan beesha [[Daarood]]ka, ee ku nool [[Dhulbaxsinta Afrika|dhulbaxsinta]] konfuur iyo galbeed, ee [[Soomaali|Dadka Soomaalida]]. Ogaadeenku waxay deegaan ku yihiin [[Itoobiya]] (gaar ahan deegaanka [[Ogaden]]), wadanka [[Soomaaliya]] (gaar ahaan koonfur), iyo wadanka [[Kiinya]].<ref>"Collective Punishment", p. 14</ref> Deegaan ahaan, wuxuu Ogaadeen soohdin qabiil la leeyahay Isaaq iyo [[reer darawiish]] dhinaca waqooyi, iyo qowmiyadda Oromo dhinaca galbeed, iyo dhinaca koonfur wuxuu Ogaadeen soohdin la leeyahay Rahanweyn.
 
 ==Daarood==
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]], wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
