*Empty MediaWiki Message*

--- a/Faadumo_Maandeeq.mw
+++ b/Faadumo_Maandeeq.mw
@@ -1,4 +1,4 @@
-'''Faadumo Cabdilahi Maandeeq''' waxay ahayd [[fanaan]]aad u weyn oo ku heesta luuqada [[Soomaalida}, Maandeeq waxay fanka soo bilowday 1961 waxaa guursaday maxamed axmed culuc ,wax caruur ma la dhalin . waxey fanaanada kaliya codkeedana la keeni karin .
+'''Faadumo Maandeeq''' waxay ahayd [[fanaan]]aad u weyn oo ku heesta luuqada [[Soomaalida}, Maandeeq waxay fanka soo bilowday 1961 waxaa guursaday maxamed axmed culuc ,wax caruur ma la dhalin . waxey fanaanada kaliya codkeedana la keeni karin .
 Soomaalidu waxay ugu hibeeyeen in ay tahay horyaalka fanka.
 Abwaano badan oo ay ka mid yihiin
 Axmed Saleebaan bidde,Cali Sugulle iyo Maxamed Cali Kaarriye ayaa barnaamij ciida oo fadhiyey radio hargeysa sheegay in ay maandeeq tahay boqorada codka soomaaliyeed. aabaheed waxaa la dhahi jiray kidmaster .riwaayado badan ayey dhigtay.
