--- a/Abukar_Maalim.mw
+++ b/Abukar_Maalim.mw
@@ -1,2 +1,2 @@
-Sheekh abuukar xasan maalim الشيخ ابوبكر حسن مالم waa caalim soomsaliyeed aadna looga yaqaan gayiga soomaliyeed gaar ahaan koonfurta [[soomaaliya]] sheekha ayaa lagu yaqaanaa fidinta diinta [[islaamka]] sida akhrimta duruusta diiniga ah sida tafsiirka,fiqhiga,carabiyada,[[tasawufka]], caqiidada waxaa kale oo sheekha caan Ku yahay muxaadarooyin wuxuuna sheekh haatan wadaa akhrinta duruusta EE masaajida magaalada [[muqdisho]]
+abuukar maalim الشيخ ابوبكر حسن مالم waa caalim soomsaliyeed aadna looga yaqaan gayiga soomaliyeed gaar ahaan koonfurta [[soomaaliya]] sheekha ayaa lagu yaqaanaa fidinta diinta [[islaamka]] sida akhrimta duruusta diiniga ah sida tafsiirka,fiqhiga,carabiyada,[[tasawufka]], caqiidada waxaa kale oo sheekha caan Ku yahay muxaadarooyin wuxuuna sheekh haatan wadaa akhrinta duruusta EE masaajida magaalada [[muqdisho]]
 sheekha ayaa wuxuu alifay kutubo iskugu jira caqiido iyo naxwa sheekha ayaa wuu aad uga hortagaa sida caqiidada khalqan oo waayihii Danbe ku soo badanaysay dalka
