*Empty MediaWiki Message*

--- a/Xaliima_Magool.mw
+++ b/Xaliima_Magool.mw
@@ -1,7 +1,7 @@
 ::''Sharaxaad badan iyo faahfaahin [[fanaan]]iinta, fadlan fiiri [[Fanaaniinta Soomaaliya]].''
 
 [[File:Magool.jpg|thumb|Fanaanada [[Magool|Xaliimo Khaliif Magool]].]]
-'''Xaliimo Khaliif Cumar''' (Magool) (Nooleed [[May]] 2, [[1948]] – [[Maarso]] 19, [[2004]]) waxa ay ahayd hobolad caan ka ahayd gayiga [[Soomaaliya|Soomaaliyeed]], Waxaana loo yaqaane Boqorada Codka. <Ref>"[[fanaan]]ad weyn oo ku [[hees]]ta af-[[Soomaali]]ga taasi oo leh [[suugaan]] iyo [[hees]]o"</ref>
+'''Xaliimo Magool''' (Nooleed [[May]] 2, [[1948]] – [[Maarso]] 19, [[2004]]) waxa ay ahayd hobolad caan ka ahayd gayiga [[Soomaaliya|Soomaaliyeed]], Waxaana loo yaqaane Boqorada Codka. <Ref>"[[fanaan]]ad weyn oo ku [[hees]]ta af-[[Soomaali]]ga taasi oo leh [[suugaan]] iyo [[hees]]o"</ref>
 Heesaha ay qaado fanaanadani oo u badan wadani, goobaabin, talo-siin, dhiiri-gelin iyo wanaag darteed ayaa Magool loo siiyay magaca weyn ee '''Boqorada Codka Fanka Soomaaliyeed'''.<Ref>"'''Boqorada Codka Fanka Soomaaliyeed'''"</ref>
 Intaasi waxaa dheer, Magool waxaa ay leedahay naanays ay ku kasbatey kartideeda iyo hanaan-wanaageeda, waxaana lagu naanaysaa '''Magool Qurux'''.<Ref>"'''Magool Qurux'''"</ref>
 
