*Empty MediaWiki Message*

--- a/Xasan_ganay.mw
+++ b/Xasan_ganay.mw
@@ -1,4 +1,4 @@
-'''Abwaan Mujaahid Xasan Xaaji Cabdilaahi “Xasan Ganay”''' abwaanku waxa uu ku dhashay duleedka magaalada [[bula xaar]] oo katirsan gobolka [[saaxiil]] ee [[somaliland]]
+'''Abwaan Xasan Ganay''' abwaanku waxa uu ku dhashay duleedka magaalada [[bula xaar]] oo katirsan gobolka [[saaxiil]] ee [[somaliland]]
 
 
 == abwaanka faahfaahin abwanka oo kahadlaya taariikhdiisa ==
