*Empty MediaWiki Message*

--- a/Maxamed_Salaancarrabey.mw
+++ b/Maxamed_Salaancarrabey.mw
@@ -1,4 +1,4 @@
-'''Maxamed Salaan-Carrabey''', waxoo ku dhintay gobolka [[Togdheer]] [[1943]] , isaga oo da’ ah. Salaan-carrabey wuxuu ahaa hormuudka maansooleyda qarnigii labaatannaad. Wuxuu ahaa horkacayaashii hoggaanka u hayey silsiladdii Guba ee badhtamaha qarnigii galbaday ka curatay degaanno ka mid ah dhulalka Soomaalidu degto. Salaan-carrabey wuxuu safka hore kaga jiray suugaanyahankii tixdoodu mudh-baxday, kuwii ugu murtida iyo xigmadda badnaa, wuxuuna ahaa haldoor tixdiisa si ba’an looga jeclaa degaamada soomaalidu degto oo dhan, aadna loo danayn jirey, laguna dhegey dheegag ka mid ah tixdiisa, oo ay mid yihiin, “nin dhirbaaxo quudheed dugsadey dhaqayadeed maalye, dhashaaday sugtaa xaajadaad dhowrataa abide, dhadhan malaha aadmigu wuxuu kugu dhaliilaaye” iyo “xubin rag isku waajahay hadday xayga ka caddaato, afku wuxuu la xoog yahay magliga xawda kaa jara”. Salaan-carrabey wuxu tiriyey suugaan badan o ku saabsan dhex dhexaadin, nabaddayn, baanis iyo difaacid iyo weerar, intaba isugu jirta. Abwaanku wuxuu ahaa suugaanyahankii ugu horreeyey ee laba col oo is hor fadhiya tix nabaddayn ah ku kala dareeeriyey. 
+'''Maxamed Salaancarrabey''', waxoo ku dhintay gobolka [[Togdheer]] [[1943]] , isaga oo da’ ah. Salaan-carrabey wuxuu ahaa hormuudka maansooleyda qarnigii labaatannaad. Wuxuu ahaa horkacayaashii hoggaanka u hayey silsiladdii Guba ee badhtamaha qarnigii galbaday ka curatay degaanno ka mid ah dhulalka Soomaalidu degto. Salaan-carrabey wuxuu safka hore kaga jiray suugaanyahankii tixdoodu mudh-baxday, kuwii ugu murtida iyo xigmadda badnaa, wuxuuna ahaa haldoor tixdiisa si ba’an looga jeclaa degaamada soomaalidu degto oo dhan, aadna loo danayn jirey, laguna dhegey dheegag ka mid ah tixdiisa, oo ay mid yihiin, “nin dhirbaaxo quudheed dugsadey dhaqayadeed maalye, dhashaaday sugtaa xaajadaad dhowrataa abide, dhadhan malaha aadmigu wuxuu kugu dhaliilaaye” iyo “xubin rag isku waajahay hadday xayga ka caddaato, afku wuxuu la xoog yahay magliga xawda kaa jara”. Salaan-carrabey wuxu tiriyey suugaan badan o ku saabsan dhex dhexaadin, nabaddayn, baanis iyo difaacid iyo weerar, intaba isugu jirta. Abwaanku wuxuu ahaa suugaanyahankii ugu horreeyey ee laba col oo is hor fadhiya tix nabaddayn ah ku kala dareeeriyey. 
 
 
 
