*Empty MediaWiki Message*

--- a/Ibrahim_Wasugeyare.mw
+++ b/Ibrahim_Wasugeyare.mw
@@ -1,4 +1,4 @@
-Waa gabayaa caan ah waxa uu ku dhashay dagmada Wardhiigleey ee magaalada [[Muqdisho]], sanadkii [[1989]]kii
+Ibrahim Wasugeyare Waa gabayaa caan ah waxa uu ku dhashay dagmada Wardhiigleey ee magaalada [[Muqdisho]], sanadkii [[1989]]kii
 
 gabayo badan ayuu tiriyay waxaana ka mid ah:-
 
