*Empty MediaWiki Message*

--- a/Maxamed_Cali-jaah.mw
+++ b/Maxamed_Cali-jaah.mw
@@ -1,4 +1,4 @@
-'''Maxamed Cabdi Yuusuf''' wuxuu ku dhashay magaalada [[Xarardheere]] ee gobolka [[Mudug]] ee dalka [[Soomaaliya]] 1dii bishii July, sanadkii 1941dii. 
+'''Maxamed Cali-jaah''' wuxuu ku dhashay magaalada [[Xarardheere]] ee gobolka [[Mudug]] ee dalka [[Soomaaliya]] 1dii bishii July, sanadkii 1941dii. 
 
 wuxuu ahaa raiisul wasaaraha sooomaaliya inta u dhaxeesay 8 Diseembar 2003 ilaa 3 Noofambar 2004.
 
