*Empty MediaWiki Message*

--- a/Xuseen_Iidle.mw
+++ b/Xuseen_Iidle.mw
@@ -1,10 +1,10 @@
-'''Xuseen Jaamac iidle''' (Xaaji Diide) (Noolaa 18?? ilaa 1920) waxaa uu ahaa siyaasi ka tirsanaa dalka [[Jabuuti]]. Waxa uu ahaa nin taariikh weyn ku lahaa Siyaasadda iyo mid ganacsiba. Xaaji diid waxa uu ahaa nin ganacsi hanti ballaadhan ku lahaan jirey dalka [[Jabuuti]], sidoo kale waxa uu ahaa ninkii gumeysigii [[Fransiiska]] saan xoolaad kaga saxeexay in ay Djibouti tahay dhul Somaliyeed, haseyeeshee uu Faransiisku markii danbe isku dayey si aysan Djibouti ugala midoobin Dawladda federaalka soomaaliya uu samaystey dad u shaqeeya fransiiska si ay u socoto danaha ay leeyihiin.Balse dabadeedna ku guulaystey in Djibouti ay ahaato dowlad ka gaar ah Dawladda soomaaliya sidaasina Djibouti ay ku hir gashay in ay xornimada ay qataan.
+'''Xuseen Iidle''' (Noolaa 18?? ilaa 1920) waxaa uu ahaa siyaasi ka tirsanaa dalka [[Jabuuti]]. Waxa uu ahaa nin taariikh weyn ku lahaa Siyaasadda iyo mid ganacsiba. Iidle waxa uu ahaa nin ganacsi hanti ballaadhan ku lahaan jirey dalka [[Jabuuti]], sidoo kale waxa uu ahaa ninkii gumeysigii [[Fransiiska]] saan xoolaad kaga saxeexay in ay Djibouti tahay dhul Somaliyeed, haseyeeshee uu Faransiisku markii danbe isku dayey si aysan Djibouti ugala midoobin Dawladda federaalka soomaaliya uu samaystey dad u shaqeeya fransiiska si ay u socoto danaha ay leeyihiin.Balse dabadeedna ku guulaystey in Djibouti ay ahaato dowlad ka gaar ah Dawladda soomaaliya sidaasina Djibouti ay ku hir gashay in ay xornimada ay qataan.
  
-Alle ha u naxariistee Xaaji Diide ayaa laga soo xigtey qoraalo uu mar hore soo saarey golaha sare ee arrimaha Islaamka ee Djibouti iyo dad ay isku dhawyihiin Xaaji Diide, islamarkaana Carabi ku qornaa dabadeedna ay Somalidu u rogtey ayaa u dhignaa sidan:
+Alle ha u naxariistee Iidle ayaa laga soo xigtey qoraalo uu mar hore soo saarey golaha sare ee arrimaha Islaamka ee Djibouti iyo dad ay isku dhawyihiin Iidle, islamarkaana Carabi ku qornaa dabadeedna ay Somalidu u rogtey ayaa u dhignaa sidan:
 
-* 1.) Ugu Horreyn Abtirsiiintii Xaajiga Iyo Meelihii Uu Ku Barbaarey: waa aftarsiinta uu lahaa ala u naxariistee xuseen jaamac iidle oo ku magac dheeraa xaaji diide Waxa uu ku dhashey deegaanka [[Lughaya]]ee gobolka [[Awdal]] wuxuuna ku geeriyoodey magaalada Djibouti :[[1920]]kii.
+* 1.) Ugu Horreyn Abtirsiiintii Xaajiga Iyo Meelihii Uu Ku Barbaarey: waa aftarsiinta uu lahaa ala u naxariistee xuseen jaamac iidle oo ku magac dheeraa Diide Waxa uu ku dhashey deegaanka [[Lughaya]]ee gobolka [[Awdal]] wuxuuna ku geeriyoodey magaalada Djibouti :[[1920]]kii.
 
-* 2.) Tafiirtiii Xaajiga: Xaaji Diide waxa uu dhalay wiil iyo gabadh la kala odhan jirey Maxamuud Xaaji Diide iyo Cajaa`ib Xaaji Diide, haseyeeshee wakhtigan xaadirka ah waxaa tafiirtii Xaajiga ka nool dhowr gabdhood oo ay Cajaa`ib Xaaji ayey u tahay. Ganacsi ahaan: Xaaji Diide waxa uu ka mid ahaa ganacsatadii [[geeska Africa]] ugu magaca weynayd xilligii gumeysiga iyo ka horba, ganacsigiisu waxaa xarun u ahaan jirtey [[magaalada Zaylac]] kadib markii [[dekadda Djibouti]] la fureyna halkaasi ayuu u digo rogtey wuxuuna ka mid ahaa madaxdii asaastey waaxda ganacsiga Djibouti ( chamber de commerce) sida uu qirey guddoomiyihii hore ee waaxdaasi Marxuum Siciid Cali Kubeysh. Si kastaba ha ahaatee ganacsiga Xaaji Xuseen Jamaac Iidle (Xaaji Diide) kuma ekeyn kaliya [[Zaylac]] iyo Djibouti balse waxa uu saldhigyo ku lahaan jirey ama uu badeecadaha u kala diri jirey magaalooyin ay ka mid ahaayeen [[Diridhaba]] iyo [[Herer]] oo [[Itoobiya]] ka mid ah. Sidoo kale waxa la sheegey in uu xoolo kala duwan ku lahaan jirey [[woqooyiga Somalia]] gaarahaanna deegaannada u dhexeeya [[Zaylac]] iyo [[Lughaya]] oo ay qoyskiisa qaar ka mid ahi deganaan jireen. Xaaji Diide waxa lagu xusuustaa waxqabadyo badan oo samafal ah oo uu ka fuliyey Template:Djibouti, iyada oo aan la soo koobi karayn tabarrucaatkii sheekha oo aan cidi diiwaan gelin wakhtigaasi maadaama uu dadku xilligaasi waxba qori jirin, haddana iyada oo ay sidaa tahay ayaa waxaynnu soo qaadan karnaa qodobadan hoos ku xusan:
+* 2.) Tafiirtiii Xaajiga: Iidle waxa uu dhalay wiil iyo gabadh la kala odhan jirey Maxamuud Xaaji Diide iyo Cajaa`ib Xaaji Diide, haseyeeshee wakhtigan xaadirka ah waxaa tafiirtii Xaajiga ka nool dhowr gabdhood oo ay Cajaa`ib Xaaji ayey u tahay. Ganacsi ahaan: Xaaji Diide waxa uu ka mid ahaa ganacsatadii [[geeska Africa]] ugu magaca weynayd xilligii gumeysiga iyo ka horba, ganacsigiisu waxaa xarun u ahaan jirtey [[magaalada Zaylac]] kadib markii [[dekadda Djibouti]] la fureyna halkaasi ayuu u digo rogtey wuxuuna ka mid ahaa madaxdii asaastey waaxda ganacsiga Djibouti ( chamber de commerce) sida uu qirey guddoomiyihii hore ee waaxdaasi Marxuum Siciid Cali Kubeysh. Si kastaba ha ahaatee ganacsiga Xaaji Xuseen Jamaac Iidle (Xaaji Diide) kuma ekeyn kaliya [[Zaylac]] iyo Djibouti balse waxa uu saldhigyo ku lahaan jirey ama uu badeecadaha u kala diri jirey magaalooyin ay ka mid ahaayeen [[Diridhaba]] iyo [[Herer]] oo [[Itoobiya]] ka mid ah. Sidoo kale waxa la sheegey in uu xoolo kala duwan ku lahaan jirey [[woqooyiga Somalia]] gaarahaanna deegaannada u dhexeeya [[Zaylac]] iyo [[Lughaya]] oo ay qoyskiisa qaar ka mid ahi deganaan jireen. Xaaji Diide waxa lagu xusuustaa waxqabadyo badan oo samafal ah oo uu ka fuliyey Template:Djibouti, iyada oo aan la soo koobi karayn tabarrucaatkii sheekha oo aan cidi diiwaan gelin wakhtigaasi maadaama uu dadku xilligaasi waxba qori jirin, haddana iyada oo ay sidaa tahay ayaa waxaynnu soo qaadan karnaa qodobadan hoos ku xusan:
 
 * 1.)Waxyaabihii Uu Same Faluhu Dar Ilaahay Ula Baxay: waxa la sheegaa in tabarruca Sheekhu uu intan la ogyahay ka badnaa balse la baylihiyey marar badan ama lagu takrifalay loona adeegsadey dano gaar ah.
 
