--- a/Qorof.mw
+++ b/Qorof.mw
@@ -1,3 +1,3 @@
-Qorof waa degmo gutalo gobalga galgadud. waxay udaxeeysa degmada caabudwaaq iyo galinsoor. qiyaas ahan waxa dagan 200 oo family. waxay ledahay laba ceel beyod. degmada waxaa dagoo beesha wagardhac mareexan sade. gar ahaan waxaa degoo beesha reer allamagan. reer allamagan waxay ugalabaxan sadex reer. waa reer maxamud allamagan, reer qeyr allamagan, iyo reer samater allamagan. reer allamagan waa beeesha ugu badan beel weynta wagardhaceed. waxaa nabadoon u ah xasan yare cilmi. 
+Qorof sidookale waxaa daga besha sirig oo ah jifada labadaa ee gu balaran besha wagardhac<sub><ref>qorof waxaa dagan besha Sirig oo ah besha labaa ee ugu baladhan besha Wagardhac.</ref></sub> waa degmo gutalo gobalga galgadud. waxay udaxeeysa degmada caabudwaaq iyo galinsoor. qiyaas ahan waxa dagan 200 oo family. waxay ledahay laba ceel beyod. degmada waxaa dagoo beesha wagardhac mareexan sade. gar ahaan waxaa degoo beesha reer allamagan. reer allamagan waxay ugalabaxan sadex reer. waa reer maxamud allamagan, reer qeyr allamagan, iyo reer samater allamagan. reer allamagan waa beeesha ugu badan beel weynta wagardhaceed. waxaa nabadoon u ah xasan yare cilmi. 
 
 dadga canga ah oo gadashay beesha reer allamagan waxaa gamid ah mahamed hanolato, o gamid ahaa SYL. abwaan galayax, abwaan samater murug, general abdi cigal iyo dad gale o badan. beesha reer allamagan waxay galoo dagtaa magalada caabudwaaq, degmada dhabad,iyo dhacdheer.
