*Empty MediaWiki Message*

--- a/Aamina_Xirsi.mw
+++ b/Aamina_Xirsi.mw
@@ -1,1 +1,1 @@
-Aamina cabdullaahi waa fanaaniintii soo waqtiigii hibo iyo maryam mursal waxay ku soo caan baxday gaal iyo muslim yaa ku leh gabdhayahow oo ay la meteshay maandeeq,sooraan sahra siyaad,iyo axmed gacayte. riwaayaddi dab jacayl kari oo ay la meteshay dab jacayl kari waa, beeneey ma run baa, ninbo xamar timi ,bidaar sibiq bay kugu gasahaa. ragga ay la heestay waxaa ka mid salax qaasim naaji, cabdulkhadir jubba,axmed cali cigaal, samatar,cabdinaasir macalin, maxamed axmed ,axmed gacayte iyo qaar kale oo badan. heeshaheeda caanka waxaa ka mid ah waah waah, weli gabar ma sheekeeysateen ,qalanjo, ambabaxay socodkaa , caasuqu waddaad ma leh, si yar.
+Aamina Xirsi waa fanaaniintii soo waqtiigii hibo iyo maryam mursal waxay ku soo caan baxday gaal iyo muslim yaa ku leh gabdhayahow oo ay la meteshay maandeeq,sooraan sahra siyaad,iyo axmed gacayte. riwaayaddi dab jacayl kari oo ay la meteshay dab jacayl kari waa, beeneey ma run baa, ninbo xamar timi ,bidaar sibiq bay kugu gasahaa. ragga ay la heestay waxaa ka mid salax qaasim naaji, cabdulkhadir jubba,axmed cali cigaal, samatar,cabdinaasir macalin, maxamed axmed ,axmed gacayte iyo qaar kale oo badan. heeshaheeda caanka waxaa ka mid ah waah waah, weli gabar ma sheekeeysateen ,qalanjo, ambabaxay socodkaa , caasuqu waddaad ma leh, si yar.
