*Empty MediaWiki Message*

--- a/Cabdule_Hanuuniye.mw
+++ b/Cabdule_Hanuuniye.mw
@@ -1,1 +1,1 @@
-cabdulle yusuf hanuuniye waxuu heeshahiisa u bandaa single ilaa laga gaaro filimkii cilmi iyo caado uu metelay, heesaha uu la laxanka u sameeyay oo ay isaga iyo maandeeq ugu ciyaareen oo cajiibka lahayd gacalo guur iyo ayaan iyo heestii carruuta markay dhashaan oo ay la qaadayso maandeeq oo ay laa jiidanaayeen saado cali, iyo cadar kaahin iyo xabiibo xan tooxow oo aheyd video clip soomaali ugu horreyay baxsan iyo kuluc arooskooda carruurta oo video qurxan laga qaaday maandeeq iyo hanuuniye daadahiyeen.
+cabdulle hanuuniye waxuu heeshahiisa u bandaa single ilaa laga gaaro filimkii cilmi iyo caado uu metelay, heesaha uu la laxanka u sameeyay oo ay isaga iyo maandeeq ugu ciyaareen oo cajiibka lahayd gacalo guur iyo ayaan iyo heestii carruuta markay dhashaan oo ay la qaadayso maandeeq oo ay laa jiidanaayeen saado cali, iyo cadar kaahin iyo xabiibo xan tooxow oo aheyd video clip soomaali ugu horreyay baxsan iyo kuluc arooskooda carruurta oo video qurxan laga qaaday maandeeq iyo hanuuniye daadahiyeen.
