*Empty MediaWiki Message*

--- a/Sacad_Cali_Shire.mw
+++ b/Sacad_Cali_Shire.mw
@@ -1,6 +1,6 @@
 {{Macluumaad Qof Madax Ah|name=Dr. Saad Ali Shire <br/> د. سعد علي شيره|image=|office1=[[Wasiirka Maaliyadda]]|president1=[[Muse Bihi Abdi]]|office2=[[Wasiirka Arrimaha Dibadda]]|president2=[[Muse Bihi Abdi]] -- [[Ahmed Mohamed Mohamoud]]|office3=[[Wasiirka Qorshaynta]]|president3=[[Ahmed Mohamed Mohamoud]]|party=[[Peace, Unity, and Development Party]]|spouse=|children=3|residence=[[Hargeisa]], [[Somaliland]]|alma_mater=[[Pennsylvania State University]] <br> [[University of Havana]] <br> [[Somali National University]]}} 
 
-'''Dr. Sacad Cali Shire Naleye''' waa siyaasi iyo dhaqaaleyahan soomaali ah, kaasoo hadda ah Wasiirka Maaliyadda ee Somaliland. Sacad ayaa hore u soo noqday Wasiirka Arimaha Dibada ee Somaliland . Waxa kale oo isna loo magacaabay Wasiirka Qorshaynta iyo Horumarinta Qaranka ee Somaliland. 
+'''Dr. Sacad Shire ''' waa siyaasi iyo dhaqaaleyahan soomaali ah, kaasoo hadda ah Wasiirka Maaliyadda ee Somaliland. Sacad ayaa hore u soo noqday Wasiirka Arimaha Dibada ee Somaliland . Waxa kale oo isna loo magacaabay Wasiirka Qorshaynta iyo Horumarinta Qaranka ee Somaliland. 
 
 == Nolosha shaqsiyeed ==
 Waxa uu ka soo jeedaa Issa Musse. Kahor intaanu galin siyaasada wuxuu ahaa maamulaha waaxda [[Midowga boqortooyada Britan|UK]] ee [[Dahabshiil]] .  
