*Empty MediaWiki Message*

--- a/Barkhad_Saalax.mw
+++ b/Barkhad_Saalax.mw
@@ -1,5 +1,5 @@
 {{Macluumaad Qof Madax Ah
-| name = Barkhad Cali Saalax<br> برخاد علي صلاح <small> </small> 
+| name = Barkhad Saalax<br> برخاد علي صلاح <small> </small> 
 | image =
 | imagesize = 
 | birth_date = 
@@ -26,7 +26,7 @@
 | party = 
 }}
 
-'''Barkhad Cali Saalax''' ({{lang-en|Barkhad Ali Salah}}, {{lang-ar| برخاد علي صلاح }}) Waa Siyaasi iyo Taariikhyahan Soomaaliyeed, Waxaa loo doortay Duqii u horreeyay ee Degmada [[Boosaaso]].<ref>https://www.daljir.com/taariikhyahan-barkhad-cali-saalax-oo-boosaaso-ku-geeriyoodey/</ref> <ref>https://www.sanaag.so/2015/07/31/siyaasi-barkhad-cali-saalax-oo-ka-waramaya-aasaskii-puntland-iyo-marxaladihii-ay-soo-martay/</ref>
+'''Barkhad Saalax''' ({{lang-en|Barkhad Salah}}, {{lang-ar| برخاد علي صلاح }}) Waa Siyaasi iyo Taariikhyahan Soomaaliyeed, Waxaa loo doortay Duqii u horreeyay ee Degmada [[Boosaaso]].<ref>https://www.daljir.com/taariikhyahan-barkhad-cali-saalax-oo-boosaaso-ku-geeriyoodey/</ref> <ref>https://www.sanaag.so/2015/07/31/siyaasi-barkhad-cali-saalax-oo-ka-waramaya-aasaskii-puntland-iyo-marxaladihii-ay-soo-martay/</ref>
 
 ==Taariikh==
 Barkhad wuxuu ku dhasahy gobolada Woqooyi Bari Soomaalia, Gaar ahaan Degmada Boosaaso Sanadku markuu ahaa 1932. Jaamacada umadda Soomaaliyeed ayuu ka qaatay shahaado jaamacadeed. Wuxu xilal kala duwan ka qabtay Dowladii dhexe ee [[soomaaliya|Soomaaliya]] iyo Dowladda [[puntland|Puntland]] ee Soomaaliyeed.
