*Empty MediaWiki Message*

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -573,6 +573,10 @@ Adjaye oo yidhi:
 
 *Xuduudkii xiliga Dagaalka Dunida Kowaad, waxay ahayd Ankhor, ilaa Eil Dur Elan, ilaa Badwein, ilaa 46ka longitude.
 
+==Aasaaska==
+:"1897kii isaggoo koox wadaaddo ah wata ..." (i.e. Aadan Seed Magan,  Obsiiye Seed Magan,  Aw Cabbaas Xuseen Muuse, Maxamuud Dheri) .... "wuxuu halkaa (Qoryaweyn) ka abuuray ururkii ugu horreeyey dhiskii Daraawiisheed". 
+
+:(translation) "In 1987 him (the Sayyid) and a group of fellow clergymen travellers ..." (i.e. Aadan Magan, Obsiiye Magan, Aw Abbas Xuseen, Mahamuud Dheri) ... "there (at Qoryaweyn) they founded the very first nascent Darwiish group" ( halyeeyga darwiish ee Garaad Soofe Durraan -1957kii ... halyeeyga darwiish ee Cabdi Cali Guuleed "Cabdi-Yaar -1955kii)
 
 ==Sidoo kale fiiri==
 *[[Soomaali|Beelaha Soomaalida]]
