*Empty MediaWiki Message*

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -1,6 +1,6 @@
 {{pp-protected|small=yes}}
 {{Infobox ethnic group|
-|group=Reer Darawiish ({{Flagicon image|Dhulbahante flag.png}} Dhulbahante) <br> البهانتة) درویش‎)|image= [[File:Reer Daraawiish (Dhulbahante).png|300px]] 
+|group=Reer Darawiish ({{Flagicon image|Dhulbahante flag.png}} Dhulbahante) <br> البهانتة) عشيرة درویش)|image= [[File:Reer Daraawiish (Dhulbahante).png|300px]] 
 |flag = 
 |region1 = {{flagcountry|Soomaaliya}}
 |region3 = {{flagcountry|Itoobiya}}
