--- a/Muqdisho.mw
+++ b/Muqdisho.mw
@@ -49,7 +49,7 @@
 |footnotes =
 }} <!-- Infobox ends !-->
 
-'''Muqdisho''' ([[Af-Taliyaani]]: ''Mogadiscio'', [[Carabi]]: مقديشو, ''Xamar'', [[Carabi]]: حَمَر) waa caasimada Jamhuuriyadda Fedraalka [[Soomaaliya]], waxa ayna ku taalaa galbeedka [[Badda Soomaaliyeed]], waa magaalo qurux badan oo indhuhu soo jiitaan, oo aay [[Badda Soomaaliyeed]] kaga wareegsan tahay [[sadax]] jiho.
+'''Muqdisho''' waa caasimada Jamhuuriyadda Fedraalka [[Soomaaliya]], waxa ayna ku taalaa galbeedka [[Badda Soomaaliyeed]], waa magaalo qurux badan oo indhuhu soo jiitaan, oo aay [[Badda Soomaaliyeed]] kaga wareegsan tahay [[sadax]] jiho.
                        
 Waxaa magaalada Muqdisho dhidibada loo aasay waqti aad u fog oo aay taariikhyahanada isku qilaafeen in magaaladani la aas'aasay qarnigii 2aad ama kii 3aad ee taariikhda miilaadiga.
                                                                                               
