/* Qaab Dhismeedka Beesha Mudulood (Mudulod Hirab Madable) */

--- a/Mudulood.mw
+++ b/Mudulood.mw
@@ -18,7 +18,7 @@ Odiweyn mudulood ama maxamed mudulood Halgamayada ka dhashay waxaa ka mid ah hog
 *Beesha Mudulood waxa ay ka u kala baxdaa sida soo socota:
  
 * Maxammed MUDULOOD ama Odiweyn "MUDULOOD" ama udgoon mudulood. (cabdi shiiq dhiblaawe)
-* Ciise Mudulood.(Udeejeen)
+* Ciise Mudulood.(Ujeejeen)
 
 Wacweteen mudulood (c/raxmaab.) MUDULOOD.!! 
 * Dalandoole Mudulood; iyo Hiilebi oo adeer u ah.!! 
