Reverted edits by [[Special:Contribs/154.115.222.168|154.115.222.168]] ([[User talk:154.115.222.168|talk]]) to last version by AbshirBot: test edits, please use the sandbox

--- a/Yuraaniyaam.mw
+++ b/Yuraaniyaam.mw
@@ -8,8 +8,7 @@ Yuraaniyam waa [[bir]] leh 92 elektaroon iyo 92 borotoon, taas oo leh radioactiv
 Ayadoo [[Isku dhis]] ah ayaa laga helaa [[dhul]]ka [[hal]] meel [[milyan]]kii qidcadood ee [[caro]], [[dhagax]] ama [[biyo]] ah. 
 Yuraaniyam-239 waxaa loo isticmaalaa in laga sameeyo hubka khatarta badan ee [[Nukliyeer]]ka. 
 
-<big><big>Big text</big><big><big>Big text</big><big><sub>Big text</sub></big></big></big>= Taariikhda Yuraaniyamta =
-Yuraaniyamta waa macdan laga helo carrada Taas oo leh faa'iido waxtar badan waxaana laga sameeya hubka khatarta badan ee nukliyeerka
+= Taariikhda Yuraaniyamta =
 
 = Noocyada Yuraaniyamta =
 
