*Empty MediaWiki Message*

--- a/Yuraaniyaam.mw
+++ b/Yuraaniyaam.mw
@@ -9,7 +9,7 @@ Ayadoo [[Isku dhis]] ah ayaa laga helaa [[dhul]]ka [[hal]] meel [[milyan]]kii qi
 Yuraaniyam-239 waxaa loo isticmaalaa in laga sameeyo hubka khatarta badan ee [[Nukliyeer]]ka. 
 
 = Taariikhda Yuraaniyamta =
-
+Yuraaniyamta waa macdan laga helo carrada Taas oo leh faa'iido waxtar badan waxaana laga sameeya hubka khatarta badan ee nukliyeerka
 = Noocyada Yuraaniyamta =
 
 = Isku Dhisyada Dabiiciga =
