*Empty MediaWiki Message*

--- a/Oog.mw
+++ b/Oog.mw
@@ -1,6 +1,6 @@
 '''Oog'''  waa degmo ka tirsan gobolka [[Sool]] ee [[somaliland]], degmada waxa Galbeed ka xiga magalada [[caynaba]] dhanka waqooyi [[badweyn]] koonfur [[habariheshay]]
 
-Degmada waxa kasoo jeda wasir ki hore ee [[maxamuud xaashi cabdi]] iyo [[suldan haji suudi]] oo ahaa aasaasihi darawishta.
+Degmada waxa kasoo jeda wasir ki hore ee [[maxamuud xaashi cabdi]] iyo [[suldan haji suudi]] oo ahaa afhayeenka [[sayyidka]].
 
 
 
