*Empty MediaWiki Message*

--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -1,16 +1,16 @@
 {{Infobox country
 |conventional_long_name = Dowlad Goboleedka Khaatumo ee Soomaaliya
-|common_name = Khatumo
+|common_name = Khatumo (Darawiish)
 |image_flag = Darawiish (khatumo) flag.png 
 |image_coat =  Darawiish SSC crest.jpg
 |image_map = KhatumoStateloc.PNG
 |national_motto = 
-|demonym = Khatumite<ref name=2009factbook>{{cite web |url=https://www.cia.gov/library/publications/the-world-factbook/geos/so.html |title=Somalia |accessdate=31 May 2009 |date=14 May 2009 |work=[[World Factbook]] |publisher=[[Central Intelligence Agency]]}}</ref>
+|demonym = Reer Darawiish<ref name=2009factbook>{{cite web |url=https://www.cia.gov/library/publications/the-world-factbook/geos/so.html |title=Somalia |accessdate=31 May 2009 |date=14 May 2009 |work=[[World Factbook]] |publisher=[[Central Intelligence Agency]]}}</ref>
 |capital = [[Buuhoodle]] 
 |coordinates = {{Coord|9|8|N|48|25|E|type:city}}
 |largest_city = Laascaanood
 |government_type = ismaamul Dimuqraadiyad madaxtooyo
-|leader_title1 = Madaxweyne
+|leader_title1 = Madaxweynaha reer darawiish
 |leader_name1 = [[Cali Khaliif Galayr]]
 |area_rank = 
 |area_magnitude = 
